--- a/demo-park-api/demo-park-api/src/main/resources/application.properties
+++ b/demo-park-api/demo-park-api/src/main/resources/application.properties
@@ -1,3 +1,21 @@
 # Locale
 spring.mvc.locale-resolver=fixed
 spring.mvc.locale=pt_BR
+
+
+#Instrução para acessar DB_postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo_park
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+#JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
